--- a/setup.cfg
+++ b/setup.cfg
@@ -37,13 +37,13 @@ install_requires =
     accelerate>=0.27.2
     huggingface-hub>=0.11.1,<1.0.0
     tokenizers>=0.13.3
-    transformers==4.43.1  # if you change this, please also change version assert in petals/__init__.py
+    transformers==4.51.0  # if you change this, please also change version assert in petals/__init__.py
     speedtest-cli==2.1.3
     hivemind @ git+https://github.com/learning-at-home/hivemind.git@213bff98a62accb91f254e2afdccbf1d69ebdea9
     tensor_parallel==1.0.23
     humanfriendly
     async-timeout>=4.0.2
-    cpufeature>=0.2.0; platform_machine == "x86_64"
+    cpufeature>=0.2.0
     packaging>=20.9
     sentencepiece>=0.1.99
     peft==0.8.2
